# unbundle

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
.github/workflows/: changelog-guard.yml  ci.yml  release.yml
benches/: extraction_benchmarks.rs  unbundle_benchmarks.rs
docs/: benchmark-baseline-2026-02-14.md
docs/assets/: unbundle-cli-demo.ffscript
examples/: async_extraction.rs  audio_iterator.rs  extract_audio.rs  extract_audio_segment.rs  extract_frames.rs  frame_iterator.rs  gif_export.rs  hardware_acceleration.rs  hw_acceleration.rs  keyframe.rs  keyframe_analysis.rs  loudness.rs  loudness_analysis.rs  metadata.rs  open_url.rs  packet_inspect.rs  packet_iterator.rs  parallel_extraction.rs  pixel_formats.rs  progress.rs  rayon.rs  remux.rs  scene.rs  scene_detection.rs  subtitle.rs  subtitle_search.rs  subtitles.rs  thumbnail.rs  thumbnail_grid.rs  transcode.rs  validate.rs  variable_framerate.rs  vfr_detection.rs  video_encoder.rs  video_iterator.rs  waveform.rs  waveform_analysis.rs  write_video.rs
src/: audio.rs  audio_iter.rs  audio_iterator.rs  config.rs  configuration.rs  conversion.rs  convert.rs  encode.rs  error.rs  ffmpeg.rs  gif.rs  hardware_acceleration.rs  hw_accel.rs  hwaccel.rs  iterator.rs  keyframe.rs  keyframes.rs  lib.rs  loudness.rs  metadata.rs  packet_iter.rs  packet_iterator.rs  parallel.rs  probe.rs  progress.rs  rayon.rs  remux.rs  scene.rs  stream.rs  subtitle.rs  thumbnail.rs  transcode.rs  unbundle.rs  unbundler.rs  utilities.rs  validation.rs  variable_framerate.rs  vfr.rs  video.rs  video_iterator.rs  (+2 more)
tests/: async_extraction.rs  audio.rs  audio_extraction.rs  audio_iter.rs  audio_iterator.rs  audio_stream_copy.rs  chapters.rs  config.rs  configuration.rs  conversion.rs  error_handling.rs  frame_iterator.rs  frame_metadata.rs  gif_export.rs  hardware_acceleration.rs  hw_accel.rs  keyframe.rs  keyframe_analysis.rs  loudness.rs  metadata.rs  metadata_extended.rs  packet_iter.rs  packet_iterator.rs  parallel_extraction.rs  probing.rs  progress.rs  rayon.rs  scene.rs  scene_detection.rs  segmented_extraction.rs  subtitle.rs  subtitle_extraction.rs  subtitle_search.rs  subtitle_stream_copy.rs  thumbnail.rs  transcode.rs  validation.rs  variable_framerate.rs  vfr_analysis.rs  video.rs  (+7 more)
tests/fixtures/: generate_fixtures.bat  generate_fixtures.sh  sample_video.mkv  sample_with_chapters.mkv  sample_with_subtitles.mkv
