[package]
name = "unbundle"
version = "0.1.0"
edition = "2024"
description = "Unbundle media files - extract still frames and audio from video files"
license = "MIT"
keywords = ["video", "audio", "ffmpeg", "extraction", "media"]
categories = ["multimedia", "multimedia::video", "multimedia::audio"]

[dependencies]
ffmpeg-next = "8"
ffmpeg-sys-next = "8"
image = "0.25"
thiserror = "2.0"

# Optional: async support (feature = "async-tokio")
tokio = { version = "1", features = ["rt", "sync", "macros"], optional = true }
tokio-stream = { version = "0.1", optional = true }
futures-core = { version = "0.3", optional = true }

# Optional: parallel processing (feature = "parallel")
rayon = { version = "1.11", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

[features]
default = []
async-tokio = ["tokio", "tokio-stream", "futures-core"]
parallel = ["rayon", "crossbeam-channel"]
hw-accel = []
scene-detection = []
full = ["async-tokio", "parallel", "hw-accel", "scene-detection"]

[dev-dependencies]
criterion = "0.5"
image = "0.25"
tempfile = "3.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"

[[bench]]
name = "extraction_benchmarks"
harness = false
