[package]
name = "unbundle"
version = "3.0.0"
edition = "2024"
authors = ["Skander Jeddi <skanderjeddi@fastmail.com>"]
description = "Unbundle media files - extract still frames, audio tracks, and subtitles from video files"
license = "MIT"
repository = "https://github.com/skanderjeddi/unbundle"
readme = "README.md"
keywords = ["video", "audio", "ffmpeg", "extraction", "media"]
categories = ["multimedia", "multimedia::video", "multimedia::audio"]
exclude = ["tests/fixtures/*.mp4", "tests/fixtures/*.mkv", "target/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ffmpeg-next = "8"
ffmpeg-sys-next = "8"
image = "0.25"
log = "0.4"
thiserror = "2.0"

# Optional: async support (feature = "async-tokio")
tokio = { version = "1", features = ["rt", "sync", "macros"], optional = true }
tokio-stream = { version = "0.1", optional = true }
futures-core = { version = "0.3", optional = true }

# Optional: parallel processing (feature = "parallel")
rayon = { version = "1.11", optional = true }

# Optional: GIF export (feature = "gif")
gif = { version = "0.13", optional = true }

[features]
default = []
async-tokio = ["tokio", "tokio-stream", "futures-core"]
parallel = ["rayon"]
hw-accel = []
scene-detection = []
gif = ["dep:gif"]
waveform = []
loudness = []
transcode = []
video-writer = []
full = ["async-tokio", "parallel", "hw-accel", "scene-detection", "gif", "waveform", "loudness", "transcode", "video-writer"]

[dev-dependencies]
criterion = "0.5"
image = "0.25"
tempfile = "3.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"

[[example]]
name = "async_extraction"
required-features = ["async-tokio"]

[[example]]
name = "parallel_extraction"
required-features = ["parallel"]

[[example]]
name = "scene_detection"
required-features = ["scene-detection"]

[[example]]
name = "hw_acceleration"
required-features = ["hw-accel"]

[[bench]]
name = "extraction_benchmarks"
harness = false
